parent-child relation in dom

--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -5,7 +5,7 @@ to change and manipulate the web page using pure Javascript -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+  
     <title>DOM learning</title>
     <style>
         .bg-black{
@@ -21,7 +21,7 @@ to change and manipulate the web page using pure Javascript -->
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
-        <input type="password" name="" id="">
+        <!-- <input type="password" name="" id=""> -->
 
         <ul>
             <li class="list-item">one</li>
