event object methods

--- a/08_Events/01_eventBasics.html
+++ b/08_Events/01_eventBasics.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,5 +21,26 @@
 </body>
 
 <script>
+    const body = document.querySelector('body')
+    // body.addEventListener('click', (e) => console.log(e))
+    // body.addEventListener('click', (e) => console.log(e.clientX))
+    // body.addEventListener('click', (e) => console.log(e.target))
+    // body.addEventListener('click', (e) => console.log(e.target.id))
+    // body.addEventListener('click', (e) => console.log(e.type))
+    // body.addEventListener('click', (e) => console.log(e.timeStamp))
+    // body.addEventListener('click', (e) => console.log(e.screenX))
+    // body.addEventListener('click', (e) => console.log(e.screenY))
+    // body.addEventListener('click', (e) => console.log(e.srcElement.childNodes))
+    // body.addEventListener('click', (e) => console.log(e.srcElement.children))
+    // body.addEventListener('click', (e) => console.log(e.srcElement.accessKey))
+    // body.addEventListener('click', (e) => console.log(e.ctrlKey))
+    // body.addEventListener('click', (e) => console.log(e.altKey))
     
+
+    // const images = document.getElementById('images')
+    // images.addEventListener('click', (e) => {console.log('ul clicked')}, false)
+
+    // const japan = document.getElementById('japan')
+    // japan.addEventListener('click', (e) => console.log('japan clicked'), false)
+
 </script>
