--- a/08_Events/01_eventBasics.html
+++ b/08_Events/01_eventBasics.html
@@ -51,7 +51,7 @@ document.querySelector('#images').addEventListener('click', function(e){
         let removeIt = e.target.parentNode
         console.log(removeIt);
         // removeIt.remove()
-        removeIt.parentNode.removeChild(removeIt)
+        // removeIt.parentNode.removeChild(removeIt)
     }
 })
 </script>
