--- a/08_Events/01_eventBasics.html
+++ b/08_Events/01_eventBasics.html
@@ -59,7 +59,7 @@ document.querySelector('#images').addEventListener('click', function(e){
         let removeIt = e.target.parentNode
         console.log(removeIt);
         removeIt.remove() // remove anything within the element
-        removeIt.parentNode.removeChild(removeIt) // method to remove the child
+        // removeIt.parentNode.removeChild(removeIt) // method to remove the child
     }
 })
 </script>
