--- a/06_DOM/parent-child.html
+++ b/06_DOM/parent-child.html
@@ -29,6 +29,7 @@
 //    traversing from child to parent
    const child = document.querySelector('.child')
    console.log(child.parentElement);
+//    gives the next sibling
    console.log(child.nextElementSibling);
 //    console.log(child.nextSibling);
 </script>
